--- a/app/index.html
+++ b/app/index.html
@@ -45,19 +45,30 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-8 col-lg-9">
-                <form>
-                  <input type="text" class="search-input" placeholder="Search by keyword or item #">
-                </form>
-              </div>
-              <div class="col-sm-4 col-lg-3">
+              <div class="search-wrapper">
+                <input type="text" class="search-input office-open" placeholder="Search by keyword or item #">
                 <nav class="visual-nav">
                   <ul class="nav nav-pills">
                     <li class="nav-item item-stores"><a href="#">Stores</a></li>
                     <li class="nav-item item-cart"><a href="#">Cart <span class="badge">4</span></a></li>
+                    <li class="nav-item item-office"><a href="#"><img src="images/office-btn.png"></a></li>
                   </ul>
                 </nav>
               </div>
+              <!--<div class="col-sm-8 col-lg-7">
+                <form>
+                  <input type="text" class="search-input" placeholder="Search by keyword or item #">
+                </form>
+              </div>
+              <div class="col-sm-4 col-lg-5">
+                <nav class="visual-nav">
+                  <ul class="nav nav-pills">
+                    <li class="nav-item item-stores"><a href="#">Stores</a></li>
+                    <li class="nav-item item-cart"><a href="#">Cart <span class="badge">4</span></a></li>
+                    <li class="nav-item item-office"><a href="#"><img src="images/office-btn.png"></a></li>
+                  </ul>
+                </nav>
+              </div>-->
             </div>
           </div>
         </div>
@@ -151,9 +162,9 @@
 
       <div class="container section-specials">
         <h2>Specials</h2>
-        <div id="carrousel-slide" class="carousel slide featured-slider" data-ride="carousel" data-pause="false" >
+        <div id="carrousel-slide" class="carousel slide products-slider" data-ride="carousel" data-pause="false" >
 
-          <ol class="carousel-indicators" style='bottom: -50px;'>
+          <ol class="carousel-indicators">
             <li data-target="#carrousel-slide" data-slide-to="0" class="active"></li>
             <li data-target="#carrousel-slide" data-slide-to="1"></li>
             <li data-target="#carrousel-slide" data-slide-to="2"></li>
@@ -243,7 +254,7 @@
                   </div>
                 </div>
                 <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-                <h3 class="product-name">HP Pavilion TouchSmart ...</h3>
+                <h3 class="product-name">HP Pavilion&copy; 15" HD Touchscreen Laptop</h3>
                 <div class="reviews">
                   <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
                 </div>
@@ -260,13 +271,13 @@
                   </div>
                 </div>
                 <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-                <h3 class="product-name">Sauder® Heritage Hill ...</h3>
+                <h3 class="product-name">Sauder® Heritage Hill Double-Pedestal Desk</h3>
                 <div class="reviews">
                   <p><img src="images/reviews-icon-4.jpg" alt="4 Stars"><span class="reviews-count">22 Reviews</span></p>
                 </div>
               </div>
               <div class="col-lg-3">
-                <img src="images/pen.jpeg" alt="TUL BP3 Ballpoint" class="special-img" style='width: 245px; height: 245px;'>
+                <img src="images/pen.jpeg" alt="TUL BP3 Ballpoint" class="special-img">
                 <div class="price-info row">
                   <div class="col-lg-12">
                     <h3 class="current-price pull-left"><strong><span>$</span>13<span>.49</span></strong></h3>
@@ -277,13 +288,13 @@
                   </div>
                 </div>
                 <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-                <h3 class="product-name">TUL BP3 Ballpoint, Retractable, Medium 1.0mm ...</h3>
+                <h3 class="product-name">TUL BP3 Ballpoint, Retractable, Medium ...</h3>
                 <div class="reviews">
                   <p><img src="images/reviews-icon-3.jpg" alt="3 Stars"><span class="reviews-count">16 Reviews</span></p>
                 </div>
               </div>
               <div class="col-lg-3">
-                <img src="images/pen-red.jpeg" alt="TUL BP3 Ballpoint" class="special-img" style='width: 245px; height: 245px;'>
+                <img src="images/pen-red.jpeg" alt="TUL BP3 Ballpoint" class="special-img">
                 <div class="price-info row">
                   <div class="col-lg-12">
                     <h3 class="current-price pull-left"><strong><span>$</span>13<span>.99</span></strong></h3>
@@ -294,7 +305,7 @@
                   </div>
                 </div>
                 <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-                <h3 class="product-name">TUL BP3 Ballpoint, Retractable, Medium 1.0mm ...</h3>
+                <h3 class="product-name">TUL BP3 Ballpoint, Retractable, 1.0mm ...</h3>
                 <div class="reviews">
                   <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
                 </div>
@@ -347,7 +358,7 @@
                   </div>
                 </div>
                 <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-                <h3 class="product-name">HP Pavilion TouchSmart ...</h3>
+                <h3 class="product-name">HP&copy; Pavilion X2 2-in-1 laptop computer with 10.1" touch...</h3>
                 <div class="reviews">
                   <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
                 </div>
@@ -364,7 +375,7 @@
                   </div>
                 </div>
                 <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-                <h3 class="product-name">Sauder® Heritage Hill ...</h3>
+                <h3 class="product-name">Sauder® Heritage Hill Double-Pedestal Desk.</h3>
                 <div class="reviews">
                   <p><img src="images/reviews-icon-4.jpg" alt="4 Stars"><span class="reviews-count">22 Reviews</span></p>
                 </div>
